Update from https://github.com/thebesttv/eserver-static/commit/5d39f925d0f0b52164d69328c59c86390d77ccc1

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 02:54 -->
+<!-- 2022-10-10 12:19 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc81d3bb">1. 妙妙文章</a>
+<li><a href="#org4bb348e">1. 妙妙文章</a>
 <ul>
-<li><a href="#org2938c8a">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgab7701a">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org8f76b16">1.3. 关于编辑器</a></li>
-<li><a href="#org79ee813">1.4. 关于代码</a></li>
-<li><a href="#orgbbea336">1.5. 关于CPU</a>
+<li><a href="#org4010caa">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org07395e4">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orge7c24b6">1.3. 关于编辑器</a></li>
+<li><a href="#org91bc03f">1.4. 关于代码</a></li>
+<li><a href="#org1fd1d97">1.5. 关于CPU</a>
 <ul>
-<li><a href="#orgae26809">1.5.1. Lisp</a></li>
+<li><a href="#orga66219c">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org922dfa2">1.6. 关于算法</a>
+<li><a href="#org8ea53f9">1.6. 关于算法</a>
 <ul>
-<li><a href="#orga3728d7">1.6.1. 关于随机</a></li>
+<li><a href="#orgfb20d9d">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org51efccf">1.7. 关于AI</a></li>
-<li><a href="#orgd8c2649">1.8. 关于软件</a>
+<li><a href="#orgdf9b3ca">1.7. 关于AI</a></li>
+<li><a href="#org4a29a3c">1.8. 关于软件</a>
 <ul>
-<li><a href="#orgabbdd63">1.8.1. SQLite</a></li>
+<li><a href="#org4c5fe81">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgb90bbad">1.9. 关于workflow</a></li>
+<li><a href="#orgdf369cd">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org562b9f9">2. 棒棒视频</a>
+<li><a href="#org607ffcd">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgf1691df">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org0464596">2.2. 各种剧</a></li>
-<li><a href="#orgee929a1">2.3. 电影</a></li>
+<li><a href="#org3ca0bf1">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgbac92f6">2.2. 各种剧</a></li>
+<li><a href="#orgbe09f6a">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org2ac7905">3. 快乐游戏</a></li>
-<li><a href="#orga536cba">4. 宝藏博主</a></li>
-<li><a href="#orgd0bd09d">5. 有意思的</a>
+<li><a href="#org30c106c">3. 快乐游戏</a></li>
+<li><a href="#org61a9745">4. 宝藏博主</a></li>
+<li><a href="#orga638a5c">5. 有意思的</a>
 <ul>
-<li><a href="#org4fff9cd">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org7269ac5">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org29af181">6. 我想玩的</a></li>
+<li><a href="#orgeb9e068">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgc81d3bb" class="outline-2">
-<h2 id="orgc81d3bb"><span class="section-number-2">1.</span> <a href="#orgc81d3bb">妙妙文章</a></h2>
+<div id="outline-container-org4bb348e" class="outline-2">
+<h2 id="org4bb348e"><span class="section-number-2">1.</span> <a href="#org4bb348e">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org79df07e">
+<figure id="org5987c40">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org2938c8a" class="outline-3">
-<h3 id="org2938c8a"><span class="section-number-3">1.1.</span> <a href="#org2938c8a">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org4010caa" class="outline-3">
+<h3 id="org4010caa"><span class="section-number-3">1.1.</span> <a href="#org4010caa">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgab7701a" class="outline-3">
-<h3 id="orgab7701a"><span class="section-number-3">1.2.</span> <a href="#orgab7701a">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org07395e4" class="outline-3">
+<h3 id="org07395e4"><span class="section-number-3">1.2.</span> <a href="#org07395e4">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org8f76b16" class="outline-3">
-<h3 id="org8f76b16"><span class="section-number-3">1.3.</span> <a href="#org8f76b16">关于编辑器</a></h3>
+<div id="outline-container-orge7c24b6" class="outline-3">
+<h3 id="orge7c24b6"><span class="section-number-3">1.3.</span> <a href="#orge7c24b6">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org79ee813" class="outline-3">
-<h3 id="org79ee813"><span class="section-number-3">1.4.</span> <a href="#org79ee813">关于代码</a></h3>
+<div id="outline-container-org91bc03f" class="outline-3">
+<h3 id="org91bc03f"><span class="section-number-3">1.4.</span> <a href="#org91bc03f">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -616,8 +616,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-orgbbea336" class="outline-3">
-<h3 id="orgbbea336"><span class="section-number-3">1.5.</span> <a href="#orgbbea336">关于CPU</a></h3>
+<div id="outline-container-org1fd1d97" class="outline-3">
+<h3 id="org1fd1d97"><span class="section-number-3">1.5.</span> <a href="#org1fd1d97">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -631,8 +631,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-orgae26809" class="outline-4">
-<h4 id="orgae26809"><span class="section-number-4">1.5.1.</span> <a href="#orgae26809">Lisp</a></h4>
+<div id="outline-container-orga66219c" class="outline-4">
+<h4 id="orga66219c"><span class="section-number-4">1.5.1.</span> <a href="#orga66219c">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -655,8 +655,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org922dfa2" class="outline-3">
-<h3 id="org922dfa2"><span class="section-number-3">1.6.</span> <a href="#org922dfa2">关于算法</a></h3>
+<div id="outline-container-org8ea53f9" class="outline-3">
+<h3 id="org8ea53f9"><span class="section-number-3">1.6.</span> <a href="#org8ea53f9">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orga3728d7" class="outline-4">
-<h4 id="orga3728d7"><span class="section-number-4">1.6.1.</span> <a href="#orga3728d7">关于随机</a></h4>
+<div id="outline-container-orgfb20d9d" class="outline-4">
+<h4 id="orgfb20d9d"><span class="section-number-4">1.6.1.</span> <a href="#orgfb20d9d">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org51efccf" class="outline-3">
-<h3 id="org51efccf"><span class="section-number-3">1.7.</span> <a href="#org51efccf">关于AI</a></h3>
+<div id="outline-container-orgdf9b3ca" class="outline-3">
+<h3 id="orgdf9b3ca"><span class="section-number-3">1.7.</span> <a href="#orgdf9b3ca">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgd8c2649" class="outline-3">
-<h3 id="orgd8c2649"><span class="section-number-3">1.8.</span> <a href="#orgd8c2649">关于软件</a></h3>
+<div id="outline-container-org4a29a3c" class="outline-3">
+<h3 id="org4a29a3c"><span class="section-number-3">1.8.</span> <a href="#org4a29a3c">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgabbdd63" class="outline-4">
-<h4 id="orgabbdd63"><span class="section-number-4">1.8.1.</span> <a href="#orgabbdd63">SQLite</a></h4>
+<div id="outline-container-org4c5fe81" class="outline-4">
+<h4 id="org4c5fe81"><span class="section-number-4">1.8.1.</span> <a href="#org4c5fe81">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb90bbad" class="outline-3">
-<h3 id="orgb90bbad"><span class="section-number-3">1.9.</span> <a href="#orgb90bbad">关于workflow</a></h3>
+<div id="outline-container-orgdf369cd" class="outline-3">
+<h3 id="orgdf369cd"><span class="section-number-3">1.9.</span> <a href="#orgdf369cd">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org562b9f9" class="outline-2">
-<h2 id="org562b9f9"><span class="section-number-2">2.</span> <a href="#org562b9f9">棒棒视频</a></h2>
+<div id="outline-container-org607ffcd" class="outline-2">
+<h2 id="org607ffcd"><span class="section-number-2">2.</span> <a href="#org607ffcd">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -795,8 +795,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgf1691df" class="outline-3">
-<h3 id="orgf1691df"><span class="section-number-3">2.1.</span> <a href="#orgf1691df">Veritasium 真理元素</a></h3>
+<div id="outline-container-org3ca0bf1" class="outline-3">
+<h3 id="org3ca0bf1"><span class="section-number-3">2.1.</span> <a href="#org3ca0bf1">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -821,8 +821,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0464596" class="outline-3">
-<h3 id="org0464596"><span class="section-number-3">2.2.</span> <a href="#org0464596">各种剧</a></h3>
+<div id="outline-container-orgbac92f6" class="outline-3">
+<h3 id="orgbac92f6"><span class="section-number-3">2.2.</span> <a href="#orgbac92f6">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -845,8 +845,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgee929a1" class="outline-3">
-<h3 id="orgee929a1"><span class="section-number-3">2.3.</span> <a href="#orgee929a1">电影</a></h3>
+<div id="outline-container-orgbe09f6a" class="outline-3">
+<h3 id="orgbe09f6a"><span class="section-number-3">2.3.</span> <a href="#orgbe09f6a">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -871,8 +871,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org2ac7905" class="outline-2">
-<h2 id="org2ac7905"><span class="section-number-2">3.</span> <a href="#org2ac7905">快乐游戏</a></h2>
+<div id="outline-container-org30c106c" class="outline-2">
+<h2 id="org30c106c"><span class="section-number-2">3.</span> <a href="#org30c106c">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -901,8 +901,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga536cba" class="outline-2">
-<h2 id="orga536cba"><span class="section-number-2">4.</span> <a href="#orga536cba">宝藏博主</a></h2>
+<div id="outline-container-org61a9745" class="outline-2">
+<h2 id="org61a9745"><span class="section-number-2">4.</span> <a href="#org61a9745">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -913,7 +913,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org33775c7">
+<figure id="orgf8c4cfb">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -921,8 +921,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd0bd09d" class="outline-2">
-<h2 id="orgd0bd09d"><span class="section-number-2">5.</span> <a href="#orgd0bd09d">有意思的</a></h2>
+<div id="outline-container-orga638a5c" class="outline-2">
+<h2 id="orga638a5c"><span class="section-number-2">5.</span> <a href="#orga638a5c">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -946,8 +946,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org4fff9cd" class="outline-3">
-<h3 id="org4fff9cd"><span class="section-number-3">5.1.</span> <a href="#org4fff9cd">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org7269ac5" class="outline-3">
+<h3 id="org7269ac5"><span class="section-number-3">5.1.</span> <a href="#org7269ac5">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -959,8 +959,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org29af181" class="outline-2">
-<h2 id="org29af181"><span class="section-number-2">6.</span> <a href="#org29af181">我想玩的</a></h2>
+<div id="outline-container-orgeb9e068" class="outline-2">
+<h2 id="orgeb9e068"><span class="section-number-2">6.</span> <a href="#orgeb9e068">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -983,7 +983,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-09 22:55</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 02:54</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 12:19</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
