--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 02:54 -->
+<!-- 2022-10-10 12:19 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -37,7 +37,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org1db2b5a">1. 文章列表</a></li>
+<li><a href="#org4c6f6e4">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -47,18 +47,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org52c46b0">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org405f079">1</a> 所示.
 </p>
 
 
-<figure id="org52c46b0">
+<figure id="org405f079">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org1db2b5a" class="outline-2">
-<h2 id="org1db2b5a"><span class="section-number-2">1.</span> <a href="#org1db2b5a">文章列表</a></h2>
+<div id="outline-container-org4c6f6e4" class="outline-2">
+<h2 id="org4c6f6e4"><span class="section-number-2">1.</span> <a href="#org4c6f6e4">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="index.html">小渴栈</a></li>
@@ -69,6 +69,12 @@
 <li>daily
 <ul class="org-ul">
 <li><a href="content/daily/2022-09-28.html">保研回忆录</a></li>
+<li><a href="content/daily/my-2021.html">我的2021</a></li>
+<li><a href="content/daily/2021-05-23.html">不造写啥标题</a></li>
+<li><a href="content/daily/2021-05-22.html">仿佛有点灰暗的一天</a></li>
+<li><a href="content/daily/2021-05-20.html">520快乐</a></li>
+<li><a href="content/daily/2021-05-19.html">不知道要写啥的第二篇日记</a></li>
+<li><a href="content/daily/2021-05-18.html">Hello, 博客</a></li>
 </ul></li>
 <li>collections
 <ul class="org-ul">
@@ -84,7 +90,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 02:54</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 12:19</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
