--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 12:19 -->
+<!-- 2022-10-10 12:41 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -36,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc4206c1">1. 暑假</a>
+<li><a href="#org4e6bc0e">1. 暑假</a>
 <ul>
-<li><a href="#org408e6fc">1.1. 夏令营</a></li>
+<li><a href="#org45ab478">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org1ac48dd">2. 打工</a></li>
-<li><a href="#orgd8c6fb3">3. 我的928</a>
+<li><a href="#org003df04">2. 打工</a></li>
+<li><a href="#org72cfdac">3. 我的928</a>
 <ul>
-<li><a href="#orga6602df">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgfd675dc">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org2bdd759">4. 他们的928</a></li>
-<li><a href="#orgec8fd4a">5. 总结</a></li>
+<li><a href="#org4981ac9">4. 他们的928</a></li>
+<li><a href="#org0bd189e">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -58,7 +58,7 @@
 </p>
 
 
-<figure id="org1ee50c4">
+<figure id="org21c8023">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -81,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-orgc4206c1" class="outline-2">
-<h2 id="orgc4206c1"><span class="section-number-2">1.</span> <a href="#orgc4206c1">暑假</a></h2>
+<div id="outline-container-org4e6bc0e" class="outline-2">
+<h2 id="org4e6bc0e"><span class="section-number-2">1.</span> <a href="#org4e6bc0e">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -106,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-org408e6fc" class="outline-3">
-<h3 id="org408e6fc"><span class="section-number-3">1.1.</span> <a href="#org408e6fc">夏令营</a></h3>
+<div id="outline-container-org45ab478" class="outline-3">
+<h3 id="org45ab478"><span class="section-number-3">1.1.</span> <a href="#org45ab478">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -149,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1ac48dd" class="outline-2">
-<h2 id="org1ac48dd"><span class="section-number-2">2.</span> <a href="#org1ac48dd">打工</a></h2>
+<div id="outline-container-org003df04" class="outline-2">
+<h2 id="org003df04"><span class="section-number-2">2.</span> <a href="#org003df04">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -164,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgd8c6fb3" class="outline-2">
-<h2 id="orgd8c6fb3"><span class="section-number-2">3.</span> <a href="#orgd8c6fb3">我的928</a></h2>
+<div id="outline-container-org72cfdac" class="outline-2">
+<h2 id="org72cfdac"><span class="section-number-2">3.</span> <a href="#org72cfdac">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -181,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orga6602df" class="outline-3">
-<h3 id="orga6602df"><span class="section-number-3">3.1.</span> <a href="#orga6602df">928演唱会(bushi</a></h3>
+<div id="outline-container-orgfd675dc" class="outline-3">
+<h3 id="orgfd675dc"><span class="section-number-3">3.1.</span> <a href="#orgfd675dc">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -190,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org9ba0692">
+<figure id="org4bf4ace">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -202,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="orgeeec530">
+<figure id="orge7219dd">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -215,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org2bdd759" class="outline-2">
-<h2 id="org2bdd759"><span class="section-number-2">4.</span> <a href="#org2bdd759">他们的928</a></h2>
+<div id="outline-container-org4981ac9" class="outline-2">
+<h2 id="org4981ac9"><span class="section-number-2">4.</span> <a href="#org4981ac9">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -236,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgec8fd4a" class="outline-2">
-<h2 id="orgec8fd4a"><span class="section-number-2">5.</span> <a href="#orgec8fd4a">总结</a></h2>
+<div id="outline-container-org0bd189e" class="outline-2">
+<h2 id="org0bd189e"><span class="section-number-2">5.</span> <a href="#org0bd189e">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -252,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 12:19</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 12:41</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
