Update from https://github.com/thebesttv/eserver-static/commit/bcd4799847fec909c281a2e9466050c69bc1c9f8

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-10 12:41 -->
+<!-- 2022-10-10 21:49 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -36,46 +36,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orga27d138">1. 妙妙文章</a>
+<li><a href="#org1d71b37">1. 妙妙文章</a>
 <ul>
-<li><a href="#orgb9452fc">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgb22be22">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org1b3373c">1.3. 关于编辑器</a></li>
-<li><a href="#org3b3f533">1.4. 关于代码</a></li>
-<li><a href="#orgaadbff1">1.5. 关于CPU</a>
+<li><a href="#orgd752f72">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org69b6fa4">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org5a2b9d1">1.3. 关于编辑器</a></li>
+<li><a href="#org6f254e5">1.4. 关于代码</a>
 <ul>
-<li><a href="#orgdfa5be6">1.5.1. Lisp</a></li>
+<li><a href="#org8a8029b">1.4.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org1779508">1.6. 关于算法</a>
+<li><a href="#org5fccb9a">1.5. 关于CPU</a></li>
+<li><a href="#org6f78545">1.6. 关于算法</a>
 <ul>
-<li><a href="#org536e209">1.6.1. 关于随机</a></li>
+<li><a href="#org3a41eeb">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orga2fb535">1.7. 关于AI</a></li>
-<li><a href="#org2d88aaa">1.8. 关于软件</a>
+<li><a href="#org7926c3e">1.7. 关于AI</a></li>
+<li><a href="#org07878d0">1.8. 关于软件</a>
 <ul>
-<li><a href="#org4b8cf28">1.8.1. SQLite</a></li>
+<li><a href="#org31e32fa">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#org5380368">1.9. 关于workflow</a></li>
+<li><a href="#orgeb9a9cb">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#orge3b445c">2. 棒棒视频</a>
+<li><a href="#org8f7ae9a">2. 棒棒视频</a>
 <ul>
-<li><a href="#org4fd9761">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org66a9adf">2.2. 各种剧</a></li>
-<li><a href="#org88e7d23">2.3. 电影</a></li>
+<li><a href="#orge29f8a2">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org6d6306a">2.2. 各种剧</a></li>
+<li><a href="#org817ee1a">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orge581160">3. 快乐游戏</a></li>
-<li><a href="#org37c1503">4. 宝藏博主</a></li>
-<li><a href="#orgda9eb73">5. 有意思的</a>
+<li><a href="#org0fba3b0">3. 快乐游戏</a></li>
+<li><a href="#orgaa94c0f">4. 宝藏博主</a></li>
+<li><a href="#org57e6e5f">5. 有意思的</a>
 <ul>
-<li><a href="#orgbecff9a">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org46c7567">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org4f86bc9">6. 我想玩的</a></li>
+<li><a href="#org9f93f09">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -84,8 +84,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orga27d138" class="outline-2">
-<h2 id="orga27d138"><span class="section-number-2">1.</span> <a href="#orga27d138">妙妙文章</a></h2>
+<div id="outline-container-org1d71b37" class="outline-2">
+<h2 id="org1d71b37"><span class="section-number-2">1.</span> <a href="#org1d71b37">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -443,7 +443,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org1b8b98a">
+<figure id="org88d8145">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -506,8 +506,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-orgb9452fc" class="outline-3">
-<h3 id="orgb9452fc"><span class="section-number-3">1.1.</span> <a href="#orgb9452fc">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgd752f72" class="outline-3">
+<h3 id="orgd752f72"><span class="section-number-3">1.1.</span> <a href="#orgd752f72">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgb22be22" class="outline-3">
-<h3 id="orgb22be22"><span class="section-number-3">1.2.</span> <a href="#orgb22be22">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org69b6fa4" class="outline-3">
+<h3 id="org69b6fa4"><span class="section-number-3">1.2.</span> <a href="#org69b6fa4">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -572,8 +572,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org1b3373c" class="outline-3">
-<h3 id="org1b3373c"><span class="section-number-3">1.3.</span> <a href="#org1b3373c">关于编辑器</a></h3>
+<div id="outline-container-org5a2b9d1" class="outline-3">
+<h3 id="org5a2b9d1"><span class="section-number-3">1.3.</span> <a href="#org5a2b9d1">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -589,8 +589,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org3b3f533" class="outline-3">
-<h3 id="org3b3f533"><span class="section-number-3">1.4.</span> <a href="#org3b3f533">关于代码</a></h3>
+<div id="outline-container-org6f254e5" class="outline-3">
+<h3 id="org6f254e5"><span class="section-number-3">1.4.</span> <a href="#org6f254e5">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -614,26 +614,10 @@ future.</li>
 一个工作十年的程序员所学到的</li>
 </ul>
 </div>
-</div>
 
-<div id="outline-container-orgaadbff1" class="outline-3">
-<h3 id="orgaadbff1"><span class="section-number-3">1.5.</span> <a href="#orgaadbff1">关于CPU</a></h3>
-<div class="outline-text-3" id="text-1-5">
-<ul class="org-ul">
-<li><p>
-<a href="https://www.zhihu.com/question/49190987/answer/115183276">如果英特尔一直以挤牙膏的方式研发 CPU，CPU 的性能是否会进入一段停滞期？ - 艾斯奥特曼的回答 - 知乎</a>
-</p>
-<blockquote>
-<p>
-Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Intel的追赶者或者竞争者的时候才能感到他们的努力和强大。
-</p>
-</blockquote></li>
-</ul>
-</div>
-
-<div id="outline-container-orgdfa5be6" class="outline-4">
-<h4 id="orgdfa5be6"><span class="section-number-4">1.5.1.</span> <a href="#orgdfa5be6">Lisp</a></h4>
-<div class="outline-text-4" id="text-1-5-1">
+<div id="outline-container-org8a8029b" class="outline-4">
+<h4 id="org8a8029b"><span class="section-number-4">1.4.1.</span> <a href="#org8a8029b">Lisp</a></h4>
+<div class="outline-text-4" id="text-1-4-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
 The power of Lisp is its own worst enemy.</li>
@@ -655,8 +639,24 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org1779508" class="outline-3">
-<h3 id="org1779508"><span class="section-number-3">1.6.</span> <a href="#org1779508">关于算法</a></h3>
+<div id="outline-container-org5fccb9a" class="outline-3">
+<h3 id="org5fccb9a"><span class="section-number-3">1.5.</span> <a href="#org5fccb9a">关于CPU</a></h3>
+<div class="outline-text-3" id="text-1-5">
+<ul class="org-ul">
+<li><p>
+<a href="https://www.zhihu.com/question/49190987/answer/115183276">如果英特尔一直以挤牙膏的方式研发 CPU，CPU 的性能是否会进入一段停滞期？ - 艾斯奥特曼的回答 - 知乎</a>
+</p>
+<blockquote>
+<p>
+Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Intel的追赶者或者竞争者的时候才能感到他们的努力和强大。
+</p>
+</blockquote></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org6f78545" class="outline-3">
+<h3 id="org6f78545"><span class="section-number-3">1.6.</span> <a href="#org6f78545">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -675,8 +675,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org536e209" class="outline-4">
-<h4 id="org536e209"><span class="section-number-4">1.6.1.</span> <a href="#org536e209">关于随机</a></h4>
+<div id="outline-container-org3a41eeb" class="outline-4">
+<h4 id="org3a41eeb"><span class="section-number-4">1.6.1.</span> <a href="#org3a41eeb">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -690,8 +690,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orga2fb535" class="outline-3">
-<h3 id="orga2fb535"><span class="section-number-3">1.7.</span> <a href="#orga2fb535">关于AI</a></h3>
+<div id="outline-container-org7926c3e" class="outline-3">
+<h3 id="org7926c3e"><span class="section-number-3">1.7.</span> <a href="#org7926c3e">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -701,8 +701,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org2d88aaa" class="outline-3">
-<h3 id="org2d88aaa"><span class="section-number-3">1.8.</span> <a href="#org2d88aaa">关于软件</a></h3>
+<div id="outline-container-org07878d0" class="outline-3">
+<h3 id="org07878d0"><span class="section-number-3">1.8.</span> <a href="#org07878d0">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -713,8 +713,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org4b8cf28" class="outline-4">
-<h4 id="org4b8cf28"><span class="section-number-4">1.8.1.</span> <a href="#org4b8cf28">SQLite</a></h4>
+<div id="outline-container-org31e32fa" class="outline-4">
+<h4 id="org31e32fa"><span class="section-number-4">1.8.1.</span> <a href="#org31e32fa">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -728,8 +728,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5380368" class="outline-3">
-<h3 id="org5380368"><span class="section-number-3">1.9.</span> <a href="#org5380368">关于workflow</a></h3>
+<div id="outline-container-orgeb9a9cb" class="outline-3">
+<h3 id="orgeb9a9cb"><span class="section-number-3">1.9.</span> <a href="#orgeb9a9cb">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -739,8 +739,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orge3b445c" class="outline-2">
-<h2 id="orge3b445c"><span class="section-number-2">2.</span> <a href="#orge3b445c">棒棒视频</a></h2>
+<div id="outline-container-org8f7ae9a" class="outline-2">
+<h2 id="org8f7ae9a"><span class="section-number-2">2.</span> <a href="#org8f7ae9a">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -795,8 +795,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org4fd9761" class="outline-3">
-<h3 id="org4fd9761"><span class="section-number-3">2.1.</span> <a href="#org4fd9761">Veritasium 真理元素</a></h3>
+<div id="outline-container-orge29f8a2" class="outline-3">
+<h3 id="orge29f8a2"><span class="section-number-3">2.1.</span> <a href="#orge29f8a2">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -821,8 +821,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org66a9adf" class="outline-3">
-<h3 id="org66a9adf"><span class="section-number-3">2.2.</span> <a href="#org66a9adf">各种剧</a></h3>
+<div id="outline-container-org6d6306a" class="outline-3">
+<h3 id="org6d6306a"><span class="section-number-3">2.2.</span> <a href="#org6d6306a">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -845,8 +845,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org88e7d23" class="outline-3">
-<h3 id="org88e7d23"><span class="section-number-3">2.3.</span> <a href="#org88e7d23">电影</a></h3>
+<div id="outline-container-org817ee1a" class="outline-3">
+<h3 id="org817ee1a"><span class="section-number-3">2.3.</span> <a href="#org817ee1a">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -866,13 +866,14 @@ and exist, before it is generally received and practiced on.
 <li><a href="https://movie.douban.com/subject/26389601/">猎凶风河谷</a> (篇名翻译不错)</li>
 <li><a href="https://movie.douban.com/subject/35700395/">坠落</a> (最后的反转好可怕555)</li>
 <li><a href="https://movie.douban.com/subject/6893932/">壮志凌云2：独行侠</a> (爽片 top gun)</li>
+<li><a href="https://movie.douban.com/subject/35134230/">有史以来最棒的啤酒运送</a> (&ldquo;真相不会伤害我们，谎言才会&rdquo;)</li>
 </ul>
 </div>
 </div>
 </div>
 
-<div id="outline-container-orge581160" class="outline-2">
-<h2 id="orge581160"><span class="section-number-2">3.</span> <a href="#orge581160">快乐游戏</a></h2>
+<div id="outline-container-org0fba3b0" class="outline-2">
+<h2 id="org0fba3b0"><span class="section-number-2">3.</span> <a href="#org0fba3b0">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -901,8 +902,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org37c1503" class="outline-2">
-<h2 id="org37c1503"><span class="section-number-2">4.</span> <a href="#org37c1503">宝藏博主</a></h2>
+<div id="outline-container-orgaa94c0f" class="outline-2">
+<h2 id="orgaa94c0f"><span class="section-number-2">4.</span> <a href="#orgaa94c0f">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -913,7 +914,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa&rsquo;s Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="org548d26c">
+<figure id="org708c07b">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -921,8 +922,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgda9eb73" class="outline-2">
-<h2 id="orgda9eb73"><span class="section-number-2">5.</span> <a href="#orgda9eb73">有意思的</a></h2>
+<div id="outline-container-org57e6e5f" class="outline-2">
+<h2 id="org57e6e5f"><span class="section-number-2">5.</span> <a href="#org57e6e5f">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -946,8 +947,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgbecff9a" class="outline-3">
-<h3 id="orgbecff9a"><span class="section-number-3">5.1.</span> <a href="#orgbecff9a">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org46c7567" class="outline-3">
+<h3 id="org46c7567"><span class="section-number-3">5.1.</span> <a href="#org46c7567">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -959,8 +960,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org4f86bc9" class="outline-2">
-<h2 id="org4f86bc9"><span class="section-number-2">6.</span> <a href="#org4f86bc9">我想玩的</a></h2>
+<div id="outline-container-org9f93f09" class="outline-2">
+<h2 id="org9f93f09"><span class="section-number-2">6.</span> <a href="#org9f93f09">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -982,8 +983,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-09 22:55</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 12:41</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 21:48</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-10 21:49</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
